test/invalid_syntax_error3.spt.expected
../seephit.h:679:9:   in constexpr expansion of 'ParseError(((const char*)"Missing > on void tag")).ErrLine::operator[](((size_t)iLine))'
invalid_syntax_error3.spt:1:1: error: array subscript value '3' is outside the bounds of array type 'int [0]'
