test/invalid_syntax_error3.spt
R"*(
<HTML>
  <P> Space before void tag close angle bracket</P>
  <IMG/ >
</HTML>
)*"_html; 